--- a/netlify.toml
+++ b/netlify.toml
@@ -24,8 +24,13 @@
   [headers.values]
     "Cache-Control" = "public, max-age=31536000, s-maxage=31536000"
 
-- [[plugins]]
--  package = "netlify-plugin-cypress"
--  [plugins.inputs]
--    record = true
--    group = "Testing Built Site"
+[[headers]]
+  for = "/build/*"
+  [headers.values]
+    "Cache-Control" = "public, max-age=31536000, s-maxage=31536000"
+
+[[plugins]]
+  package = "netlify-plugin-cypress"
+  [plugins.inputs]
+   record = true
+    group = "Testing Built Site"
